add in basic view that will most likely not get used in real situations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,5 @@
 en:
   interested_person:
     create:
+      introduction: "Interested in our site? Sign up now!"
       success: 'Created InterestedPerson successfully'
