--- a/README.textile
+++ b/README.textile
@@ -8,7 +8,7 @@ little dull coding.
 
 h3. Version Requirements and Info
 
-I'd like to start a trend of people including some informationa about the platform they used while building their code. For me this includes:
+I'd like to start a trend of people including some information about the platform they used while building their code. For me this includes:
 
 ~ > ruby -v
 ruby 1.8.7 (2010-04-19 patchlevel 253) [i686-darwin10.3.0], MBARI 0x6770, Ruby Enterprise Edition 2010.02
